Add Christmas slide constructor and fix date issue

--- a/config.json
+++ b/config.json
@@ -5,6 +5,9 @@
             "type": "TimeSlide"
         },
         {
+            "type": "ChristmasSlide"
+        },
+        {
             "type": "WeatherSlide",
             "options": {
                 "observations_office": "KBOS",
