Fix a few issues found running on real hardware

--- a/config.json
+++ b/config.json
@@ -8,7 +8,7 @@
     },
     "rotating_slides": [
         {
-            "type": "WeatherSlide",
+            "type": "ForecastSlide",
             "options": {
                 "forecast_office": "BOX/69,76"
             }
